# whynote

./: .gitignore  App.hs  Config.hs  CurveApprox.hs  Device.hsc  Drawing.hs  Event.hs  File.hs  GtkProcess.hs  Main.hs  NoteData.hs  Process.hs  QuadTree.hs  Render.hs  TODO.org  Test.hs  WNPrelude.hs  Y02SVG.hs  default.nix  shell.nix  stack.yaml  whynote.cabal
c/: c_initdevice.c  c_initdevice.h
cellar/: CurveApprox.hs  QuadTree.hs
