name:           whynote
version:        1
category:       Whatever
synopsis:       A minimal note-taking program
description:
  Soon to appear.
license:        GPL-3
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.12
build-type:     Simple

executable whynote
  default-language: Haskell2010
  build-depends: base>=4
  build-depends: glib
  build-depends: mtl >= 2
  build-depends: gtk3
  build-depends: cairo
  build-depends: configurator
  build-depends: transformers
  build-depends: lens
  build-depends: aeson
  build-depends: containers >= 0.5
  build-depends: yap >= 0.1
  build-depends: time >= 1.5
  build-depends: bytestring >= 0.10

  main-is: Test.hs
  other-modules: Device
  cc-options:      -Wno-pointer-to-int-cast -std=gnu99 -DDEBUG  -fPIC
  ghc-options: -rtsopts -threaded
  install-includes:
                   c/c_initdevice.h
                   c/template-hsc-gtk2hs.h
  c-sources: c/c_initdevice.c
  include-dirs:    c

 
